--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Stesha McKindle | Web Creations</title>
-        <link rel="stylesheet" href="../public/dist/css/reset.css">
-        <link rel="stylesheet" href="../public/dist/css/main.css">
+        <link rel="stylesheet" href="/dist/css/reset.css">
+        <link rel="stylesheet" href="/dist/css/main.css">
         <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
     </head>
     <body>
